# obstacle-estimator

./: CMakeLists.txt  package.xml
config/: params.yaml
include/obstacle_estimator/: config.h  obstacle_prediction.h
launch/: obstacle_prediction_multiple.launch
nodes/: obstacle_prediction_node.cpp
src/: config.cpp  obstacle_prediction.cpp
